--- a/Scoop.Web/src/index.html
+++ b/Scoop.Web/src/index.html
@@ -158,7 +158,7 @@
     </div>
 
     <!-- ReSharper disable Html.PathError -->
-    <!-- build:js js/lib.min.js -->
+    <!-- build:js_lib js/lib.min.js -->
     <script type="text/javascript" src="js/jquery/dist/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap/dist/js/bootstrap.js"></script>
     <script type="text/javascript" src="js/bootstrap-material-design/dist/js/material.js"></script>
@@ -170,7 +170,7 @@
     <script type="text/javascript" src="js/chartist/dist/chartist.js"></script>
     <script type="text/javascript" src="js/js.cookie.js"></script>
     <!-- endbuild -->
-    <!-- build:css js/main.min.js -->
+    <!-- build:js_main js/main.min.js -->
     <script type="text/javascript" src="../build/js/connectionService.js"></script>
     <script type="text/javascript" src="../build/js/connectionViewModel.js"></script>
     <script type="text/javascript" src="../build/js/performanceTask.js"></script>
